Add employee management UI and logic (create/edit/filter/sort/reset)